#4489 options panel layout bug is fixed.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@36088 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -4362,6 +4362,11 @@ body>div:nth-child   (4) >div:nth-child   (2) >div>div:nth-child   (2) >table>tb
 	min-width: 1000px;	
 }
 
+.dataDisplayMain .panelRow >*{
+	margin: 0px 0px 0px 0px; 
+}
+ 
+ 
 /* ########################################
    ###    END OF DATA ANALYSIS VIEW     ###
    ######################################## */
